Migrated to latests library versions and compile with JDK11